--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string-array name="currency_array">
+        <item>Bitcoin</item>
+        <item>Ethereum</item>
+        <item>Verge</item>
+    </string-array>
 </resources>
