--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
         <item>Bitcoin Gold</item>
         <item>Qtum</item>
     </string-array>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
