Bar Graph prototype

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,5 @@
         <item>Qtum</item>
     </string-array>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_sentiment">SentimentActivity</string>
 </resources>
